// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: ModalPickerOpener ui button aligned left with values: Component: ModalPickerOpener => ui => button aligned left with values 1`] = `
<div
  className="d-flex align-items-center flex-row-reverse justify-content-end"
>
  <span
    className="text-truncate position-relative"
  >
    admin@42.nl
  </span>
  <Button
    className="flex-grow-0 flex-shrink-0 mr-1"
    color="primary"
    onClick={[MockFunction]}
    tag="button"
  >
    Best friend
  </Button>
</div>
`;

exports[`Component: ModalPickerOpener ui button aligned left without values: Component: ModalPickerOpener => ui => button aligned left without values 1`] = `
<div
  className="d-flex align-items-center flex-row-reverse justify-content-end"
>
  <Button
    className="flex-grow-0 flex-shrink-0"
    color="primary"
    onClick={[MockFunction]}
    tag="button"
  >
    Best friend
  </Button>
</div>
`;

exports[`Component: ModalPickerOpener ui button aligned right with values: Component: ModalPickerOpener => ui => button aligned right with values 1`] = `
<div
  className="d-flex align-items-center justify-content-between"
>
  <span
    className="text-truncate position-relative"
  >
    admin@42.nl
  </span>
  <Button
    className="flex-grow-0 flex-shrink-0 ml-1"
    color="primary"
    onClick={[MockFunction]}
    tag="button"
  >
    Best friend
  </Button>
</div>
`;

exports[`Component: ModalPickerOpener ui button aligned right without values: Component: ModalPickerOpener => ui => button aligned right without values 1`] = `
<div
  className="d-flex align-items-center justify-content-end"
>
  <Button
    className="flex-grow-0 flex-shrink-0"
    color="primary"
    onClick={[MockFunction]}
    tag="button"
  >
    Best friend
  </Button>
</div>
`;

exports[`Component: ModalPickerOpener ui custom display values: Component: ModalPickerOpener => ui => custom display values 1`] = `
<div
  className="d-flex align-items-center"
>
  <span>
    ADMIN@42.NL
  </span>
  <Button
    className="flex-grow-0 flex-shrink-0 ml-1"
    color="primary"
    onClick={[MockFunction]}
    tag="button"
  >
    Best friend
  </Button>
</div>
`;

exports[`Component: ModalPickerOpener ui tooltip: Component: ModalPickerOpener => ui => with tooltip 1`] = `
<div
  className="d-flex align-items-center"
>
  <span
    className="text-truncate position-relative"
  >
    <Tooltip
      className="w-100 h-100 position-absolute"
      content="admin@42.nl"
      tag="div"
    >
       
    </Tooltip>
    admin@42.nl
  </span>
  <Button
    className="flex-grow-0 flex-shrink-0 ml-1"
    color="primary"
    onClick={[MockFunction]}
    tag="button"
  >
    Best friend
  </Button>
</div>
`;

exports[`Component: ModalPickerOpener ui with values: Component: ModalPickerOpener => ui => with values 1`] = `
<div
  className="d-flex align-items-center"
>
  <span
    className="text-truncate position-relative"
  >
    admin@42.nl
  </span>
  <Button
    className="flex-grow-0 flex-shrink-0 ml-1"
    color="primary"
    onClick={[MockFunction]}
    tag="button"
  >
    Best friend
  </Button>
</div>
`;

exports[`Component: ModalPickerOpener ui without values: Component: ModalPickerOpener => ui => without values 1`] = `
<div
  className="d-flex align-items-center"
>
  <Button
    className="flex-grow-0 flex-shrink-0"
    color="primary"
    onClick={[MockFunction]}
    tag="button"
  >
    Best friend
  </Button>
</div>
`;
